Update navigation: Make logo and text clickable links to home

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-3">
                 <!-- Logo -->
-                <div class="flex items-center gap-5">
+                <a href="index.html" class="flex items-center gap-5 hover:opacity-90 transition-opacity">
                     <div class="bg-white rounded-full p-2 shadow-lg">
                         <img src="logo.jpg" alt="JETFIX AUTOCARE Logo" class="h-16 w-16 object-contain rounded-full">
                     </div>
@@ -593,7 +593,7 @@
                             A Passion for Excellence
                         </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- Desktop Menu -->
                 <ul class="hidden lg:flex items-center gap-8">
