Add new services: Automated Car Wash, Car Detailing, and Car Polishing

--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,9 @@
                         <li><a href="services.html" class="hover:text-secondary transition">Computerized Alignment</a>
                         </li>
                         <li><a href="services.html" class="hover:text-secondary transition">Wheel Balancing</a></li>
-                        <li><a href="services.html" class="hover:text-secondary transition">Driving School</a></li>
+                        <li><a href="services.html" class="hover:text-secondary transition">Automated Car Wash</a></li>
+                        <li><a href="services.html" class="hover:text-secondary transition">Car Detailing</a></li>
+                        <li><a href="services.html" class="hover:text-secondary transition">Car Polishing</a></li>
                     </ul>
                 </div>
 
