--- a/services.html
+++ b/services.html
@@ -636,6 +636,69 @@
                         </li>
                     </ul>
                 </div>
+
+                <!-- Service 13 - Automated Car Wash -->
+                <div class="card-hover bg-white rounded-2xl p-8 shadow-lg">
+                    <div
+                        class="icon-wrapper w-20 h-20 bg-gradient-to-br from-sky-500 to-sky-700 rounded-2xl flex items-center justify-center mb-6">
+                        <i class="fas fa-spray-can-sparkles text-white text-3xl"></i>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-3 text-gray-800 font-heading">Automated Car Wash</h3>
+                    <p class="text-gray-600 mb-4 leading-relaxed">Modern automated car wash system for a spotless
+                        vehicle in minutes.</p>
+                    <ul class="space-y-2 text-gray-600">
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Touch-free wash
+                        </li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Undercarriage
+                            cleaning</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Spot-free rinse
+                        </li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Quick drying
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Service 14 - Car Detailing -->
+                <div class="card-hover bg-white rounded-2xl p-8 shadow-lg">
+                    <div
+                        class="icon-wrapper w-20 h-20 bg-gradient-to-br from-violet-500 to-violet-700 rounded-2xl flex items-center justify-center mb-6">
+                        <i class="fas fa-car-side text-white text-3xl"></i>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-3 text-gray-800 font-heading">Car Detailing</h3>
+                    <p class="text-gray-600 mb-4 leading-relaxed">Premium car detailing services for a showroom-quality
+                        finish inside and out.</p>
+                    <ul class="space-y-2 text-gray-600">
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Interior deep
+                            clean</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Exterior hand
+                            wash & wax</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Engine bay
+                            cleaning</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Leather
+                            conditioning</li>
+                    </ul>
+                </div>
+
+                <!-- Service 15 - Car Polishing -->
+                <div class="card-hover bg-white rounded-2xl p-8 shadow-lg">
+                    <div
+                        class="icon-wrapper w-20 h-20 bg-gradient-to-br from-emerald-500 to-emerald-700 rounded-2xl flex items-center justify-center mb-6">
+                        <i class="fas fa-gem text-white text-3xl"></i>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-3 text-gray-800 font-heading">Car Polishing</h3>
+                    <p class="text-gray-600 mb-4 leading-relaxed">Professional paint polishing and protection to
+                        restore your vehicle's shine.</p>
+                    <ul class="space-y-2 text-gray-600">
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Paint
+                            correction</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Scratch
+                            removal</li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>Ceramic coating
+                        </li>
+                        <li class="flex items-center gap-2"><i class="fas fa-check text-green-500"></i>UV protection
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -694,7 +757,11 @@
                         <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
                                     class="fas fa-check text-xs"></i>Diagnostics</a></li>
                         <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
-                                    class="fas fa-check text-xs"></i>Tire Services</a></li>
+                                    class="fas fa-check text-xs"></i>Automated Car Wash</a></li>
+                        <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
+                                    class="fas fa-check text-xs"></i>Car Detailing</a></li>
+                        <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
+                                    class="fas fa-check text-xs"></i>Car Polishing</a></li>
                     </ul>
                 </div>
 
