--- a/team.html
+++ b/team.html
@@ -715,7 +715,9 @@
                         <li class="text-gray-400">Car Repair Services</li>
                         <li class="text-gray-400">Wheel Alignment</li>
                         <li class="text-gray-400">Wheel Balancing</li>
-                        <li class="text-gray-400">Driving School</li>
+                        <li class="text-gray-400">Automated Car Wash</li>
+                        <li class="text-gray-400">Car Detailing</li>
+                        <li class="text-gray-400">Car Polishing</li>
                     </ul>
                 </div>
 
