--- a/contact.html
+++ b/contact.html
@@ -304,6 +304,9 @@
                                     <option value="ac">A/C & Heating</option>
                                     <option value="electrical">Electrical Systems</option>
                                     <option value="alignment">Wheel Alignment</option>
+                                    <option value="carwash">Automated Car Wash</option>
+                                    <option value="detailing">Car Detailing</option>
+                                    <option value="polishing">Car Polishing</option>
                                     <option value="other">Other</option>
                                 </select>
                             </div>
@@ -443,7 +446,11 @@
                         <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
                                     class="fas fa-check text-xs"></i>Diagnostics</a></li>
                         <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
-                                    class="fas fa-check text-xs"></i>Tire Services</a></li>
+                                    class="fas fa-check text-xs"></i>Automated Car Wash</a></li>
+                        <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
+                                    class="fas fa-check text-xs"></i>Car Detailing</a></li>
+                        <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
+                                    class="fas fa-check text-xs"></i>Car Polishing</a></li>
                     </ul>
                 </div>
 
