--- a/gallery.html
+++ b/gallery.html
@@ -483,7 +483,11 @@
                         <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
                                     class="fas fa-check text-xs"></i>Diagnostics</a></li>
                         <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
-                                    class="fas fa-check text-xs"></i>Tire Services</a></li>
+                                    class="fas fa-check text-xs"></i>Automated Car Wash</a></li>
+                        <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
+                                    class="fas fa-check text-xs"></i>Car Detailing</a></li>
+                        <li><a href="services.html" class="hover:text-white transition flex items-center gap-2"><i
+                                    class="fas fa-check text-xs"></i>Car Polishing</a></li>
                     </ul>
                 </div>
 
