updated name section

--- a/team.html
+++ b/team.html
@@ -469,7 +469,7 @@
                                 Chief Executive Officer
                             </span>
                         </div>
-                        <h3 class="font-heading font-bold text-3xl mb-3 text-card-foreground">Commodore Abayomi Taiwo
+                        <h3 class="font-heading font-bold text-3xl mb-3 text-card-foreground">Commodore Adebayo Taiwo
                             (RTD)</h3>
                         <p class="text-muted-foreground leading-relaxed text-lg">
                             A distinguished senior strategist with a background in IT, Finance & Geodetics from
@@ -493,7 +493,7 @@
                                 Managing Director & Co-founder
                             </span>
                         </div>
-                        <h3 class="font-heading font-bold text-3xl mb-3 text-card-foreground">Mrs. Taiwo Taiwo</h3>
+                        <h3 class="font-heading font-bold text-3xl mb-3 text-card-foreground">Mrs. Linda Taiwo</h3>
                         <p class="text-muted-foreground leading-relaxed text-lg">
                             Co-founder of JETFIX AUTOCARE with expertise in business administration. Mrs. Taiwo brings
                             strategic vision and leadership to the company, driving innovation and excellence in
