Update address to full Ilorin location and add Google Maps to contact page

--- a/contact.html
+++ b/contact.html
@@ -340,7 +340,12 @@
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold mb-2 text-gray-900">Visit Us</h3>
-                                <p class="text-gray-600">Ilorin, Kwara State<br>Nigeria</p>
+                                <p class="text-gray-600">
+                                    Block B, Plot 4, 6 & 8<br>
+                                    Harmony Reservation Area<br>
+                                    Fate Road, Ilorin<br>
+                                    Kwara State, Nigeria
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -390,6 +395,25 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <!-- Google Map Section -->
+            <div class="mt-12">
+                <div class="bg-white p-4 rounded-2xl shadow-lg">
+                    <h3 class="text-2xl font-bold mb-4 text-gray-900 font-heading">Find Us on the Map</h3>
+                    <div class="w-full h-96 rounded-xl overflow-hidden">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.123456789012!2d4.542899!3d8.496944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zOMKwMjknNDkuMCJOIDTCsDMyJzM0LjQiRQ!5e0!3m2!1sen!2sng!4v1234567890"
+                            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"
+                            title="JETFIX AUTOCARE Location - Fate Road, Ilorin">
+                        </iframe>
+                    </div>
+                    <p class="mt-4 text-gray-600 text-sm">
+                        <i class="fas fa-info-circle mr-2"></i>
+                        Click on the map to open in Google Maps for directions
+                    </p>
                 </div>
             </div>
         </div>
@@ -458,8 +482,10 @@
                     <h4 class="text-white text-xl font-bold mb-4 font-heading">Contact Info</h4>
                     <div class="space-y-3">
                         <p class="flex items-start gap-3"><i
-                                class="fas fa-map-marker-alt text-secondary mt-1"></i><span>Ilorin, Kwara
-                                State,<br>Nigeria</span></p>
+                                class="fas fa-map-marker-alt text-secondary mt-1"></i><span>Block B, Plot 4, 6 & 8<br>
+                                Harmony Reservation Area<br>
+                                Fate Road, Ilorin<br>
+                                Kwara State, Nigeria</span></p>
                         <p class="flex items-center gap-3"><i class="fas fa-phone text-secondary"></i><a
                                 href="tel:+2348148595815" class="hover:text-white transition">+234 814 859 5815</a></p>
                         <p class="flex items-center gap-3"><i class="fas fa-envelope text-secondary"></i><a
