--- a/services.html
+++ b/services.html
@@ -769,8 +769,10 @@
                     <h4 class="text-white text-xl font-bold mb-4 font-heading">Contact Info</h4>
                     <div class="space-y-3">
                         <p class="flex items-start gap-3"><i
-                                class="fas fa-map-marker-alt text-secondary mt-1"></i><span>Ilorin, Kwara
-                                State,<br>Nigeria</span></p>
+                                class="fas fa-map-marker-alt text-secondary mt-1"></i><span>Block B, Plot 4, 6 & 8<br>
+                                Harmony Reservation Area<br>
+                                Fate Road, Ilorin<br>
+                                Kwara State, Nigeria</span></p>
                         <p class="flex items-center gap-3"><i class="fas fa-phone text-secondary"></i><a
                                 href="tel:+2348148595815" class="hover:text-white transition">+234 814 859 5815</a></p>
                         <p class="flex items-center gap-3"><i class="fas fa-envelope text-secondary"></i><a
