--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,8 @@
                     <ul class="space-y-2 text-gray-400 text-sm">
                         <li class="flex items-start gap-2">
                             <i class="fas fa-map-marker-alt mt-1"></i>
-                            <span>Ilorin, Kwara State, Nigeria</span>
+                            <span>Block B, Plot 4, 6 & 8, Harmony Reservation Area, Fate Road, Ilorin, Kwara State,
+                                Nigeria</span>
                         </li>
                         <li class="flex items-center gap-2">
                             <i class="fas fa-phone"></i>
