--- a/team.html
+++ b/team.html
@@ -725,9 +725,10 @@
                 <div>
                     <h4 class="font-heading font-bold text-xl mb-4">Contact Info</h4>
                     <ul class="space-y-3">
-                        <li class="flex items-center gap-2 text-gray-400">
-                            <i class="fas fa-map-marker-alt text-primary"></i>
-                            Ilorin, Kwara State, Nigeria
+                        <li class="flex items-start gap-2 text-gray-400">
+                            <i class="fas fa-map-marker-alt text-primary mt-1"></i>
+                            <span>Block B, Plot 4, 6 & 8, Harmony Reservation Area, Fate Road, Ilorin, Kwara State,
+                                Nigeria</span>
                         </li>
                         <li class="flex items-center gap-2">
                             <i class="fas fa-phone text-primary"></i>
