Fix: Add inline styles to ensure hamburger button visibility

--- a/index.html
+++ b/index.html
@@ -714,7 +714,8 @@
                 </ul>
 
                 <!-- Mobile Menu Button with Enhanced Hamburger -->
-                <button id="mobileMenuBtn" class="lg:hidden text-gray-900" aria-label="Toggle mobile menu">
+                <button id="mobileMenuBtn" class="lg:hidden text-gray-900" aria-label="Toggle mobile menu"
+                    style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 8px;">
                     <span class="hamburger-line"></span>
                     <span class="hamburger-line"></span>
                     <span class="hamburger-line"></span>
