--- a/index.html
+++ b/index.html
@@ -571,16 +571,19 @@
                 visibility: visible;
             }
 
+
             #mobileMenu {
-                transform: translateX(-100%);
+                transform: translateY(-100%);
                 opacity: 0;
+                visibility: hidden;
                 transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1),
-                    opacity 0.4s ease;
+                    opacity 0.4s ease, visibility 0.4s ease;
             }
 
             #mobileMenu.active {
-                transform: translateX(0);
+                transform: translateY(0);
                 opacity: 1;
+                visibility: visible;
             }
 
             .hamburger-line {
@@ -726,7 +729,8 @@
             <div class="mobile-menu-backdrop" id="mobileBackdrop"></div>
 
             <!-- Mobile Menu -->
-            <div id="mobileMenu" class="hidden lg:hidden pb-4">
+            <div id="mobileMenu"
+                class="fixed top-[80px] left-0 w-full bg-white shadow-lg px-4 pb-4 hidden lg:hidden z-[999]">
                 <ul class="flex flex-col gap-3">
                     <li><a href="index.html"
                             class="block text-gray-900 hover:text-secondary transition font-medium">Home</a>
