Fix: Add script.js to enable mobile menu functionality

--- a/index.html
+++ b/index.html
@@ -1266,6 +1266,9 @@
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
+
+    <!-- Main JavaScript -->
+    <script src="script.js"></script>
 </body>
 
 </html>
