--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,37 @@
 
     <!-- JavaScript -->
     <script>
+        // Mobile Menu - Simple Working Version
+        document.addEventListener('DOMContentLoaded', function () {
+            const btn = document.getElementById('mobileMenuBtn');
+            const menu = document.getElementById('mobileMenu');
+            const backdrop = document.getElementById('mobileBackdrop');
+
+            if (btn && menu) {
+                btn.onclick = function () {
+                    const isActive = menu.classList.contains('active');
+                    if (isActive) {
+                        menu.classList.remove('active');
+                        btn.classList.remove('active');
+                        if (backdrop) backdrop.classList.remove('active');
+                    } else {
+                        menu.classList.remove('hidden');
+                        menu.classList.add('active');
+                        btn.classList.add('active');
+                        if (backdrop) backdrop.classList.add('active');
+                    }
+                };
+
+                if (backdrop) {
+                    backdrop.onclick = function () {
+                        menu.classList.remove('active');
+                        btn.classList.remove('active');
+                        backdrop.classList.remove('active');
+                    };
+                }
+            }
+        });
+
         // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
