Fix: Force display block on active mobile menu

--- a/services.html
+++ b/services.html
@@ -340,6 +340,7 @@
             }
 
             #mobileMenu.active {
+                display: block !important;
                 transform: translateY(0);
                 opacity: 1;
                 visibility: visible;
