--- a/gallery.html
+++ b/gallery.html
@@ -206,7 +206,106 @@
                 display: none;
             }
         }
+
+        /* Enhanced Mobile Navigation Styles */
+        @media (max-width: 1024px) {
+            .mobile-menu-backdrop {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.5);
+                backdrop-filter: blur(4px);
+                opacity: 0;
+                visibility: hidden;
+                transition: opacity 0.3s ease, visibility 0.3s ease;
+                z-index: 998;
+            }
+
+            .mobile-menu-backdrop.active {
+                opacity: 1;
+                visibility: visible;
+            }
+
+
+            #mobileMenu {
+                transform: translateY(-100%);
+                opacity: 0;
+                visibility: hidden;
+                transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+                    opacity 0.4s ease, visibility 0.4s ease;
+            }
+
+            #mobileMenu.active {
+                transform: translateY(0);
+                opacity: 1;
+                visibility: visible;
+            }
+
+            .hamburger-line {
+                display: block;
+                width: 28px;
+                height: 3px;
+                background: currentColor;
+                border-radius: 3px;
+                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            }
+
+            .hamburger-line:not(:last-child) {
+                margin-bottom: 5px;
+            }
+
+            #mobileMenuBtn.active .hamburger-line:nth-child(1) {
+                transform: translateY(8px) rotate(45deg);
+            }
+
+            #mobileMenuBtn.active .hamburger-line:nth-child(2) {
+                opacity: 0;
+                transform: scaleX(0);
+            }
+
+            #mobileMenuBtn.active .hamburger-line:nth-child(3) {
+                transform: translateY(-8px) rotate(-45deg);
+            }
+
+            #mobileMenu ul li {
+                opacity: 0;
+                transform: translateX(-20px);
+                transition: opacity 0.3s ease, transform 0.3s ease;
+            }
+
+            #mobileMenu.active ul li {
+                opacity: 1;
+                transform: translateX(0);
+            }
+
+            #mobileMenu.active ul li:nth-child(1) {
+                transition-delay: 0.1s;
+            }
+
+            #mobileMenu.active ul li:nth-child(2) {
+                transition-delay: 0.15s;
+            }
+
+            #mobileMenu.active ul li:nth-child(3) {
+                transition-delay: 0.2s;
+            }
+
+            #mobileMenu.active ul li:nth-child(4) {
+                transition-delay: 0.25s;
+            }
+
+            #mobileMenu.active ul li:nth-child(5) {
+                transition-delay: 0.3s;
+            }
+
+            #mobileMenu.active ul li:nth-child(6) {
+                transition-delay: 0.35s;
+            }
+        }
     </style>
+
 
 </head>
 
@@ -232,7 +331,7 @@
     </div>
 
     <!-- Navigation -->
-    <nav class="bg-white shadow-lg sticky top-0 z-50">
+    <nav id="navbar" class="bg-white shadow-lg sticky top-0 z-50 transition-all duration-300">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-3">
                 <!-- Logo -->
@@ -275,9 +374,35 @@
                 </ul>
 
                 <!-- Mobile Menu Toggle -->
-                <button class="lg:hidden text-gray-900">
-                    <i class="fas fa-bars text-2xl"></i>
+                <button id="mobileMenuBtn" class="lg:hidden text-gray-900" aria-label="Toggle mobile menu"
+                    style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 8px;">
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
                 </button>
+            </div>
+
+            <!-- Mobile Menu Backdrop -->
+            <div class="mobile-menu-backdrop" id="mobileBackdrop"></div>
+
+            <!-- Mobile Menu -->
+            <div id="mobileMenu"
+                class="fixed top-[80px] left-0 w-full bg-white shadow-lg px-4 pb-4 hidden lg:hidden z-[999]">
+                <ul class="flex flex-col gap-3 text-center">
+                    <li><a href="index.html"
+                            class="block text-gray-900 hover:text-secondary transition font-medium">Home</a></li>
+                    <li><a href="services.html"
+                            class="block text-gray-900 hover:text-secondary transition font-medium">Services</a></li>
+                    <li><a href="team.html" class="block text-gray-900 hover:text-secondary transition font-medium">Our
+                            Team</a></li>
+                    <li><a href="gallery.html"
+                            class="block text-gray-900 hover:text-secondary transition font-medium">Gallery</a></li>
+                    <li><a href="contact.html"
+                            class="block text-gray-900 hover:text-secondary transition font-medium">Contact</a></li>
+                    <li><a href="tel:+2348148595815"
+                            class="bg-secondary hover:bg-red-700 text-secondary-foreground px-6 py-2 rounded font-semibold transition inline-flex items-center gap-2 justify-center"><i
+                                class="fas fa-phone"></i> Call Now</a></li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -320,8 +445,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Gallery Item 1 -->
                 <div class="gallery-item" data-category="facility">
-                    <img src="images/gallery-1.jpg" alt="JETFIX Facility" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1625047509168-a7026f36de04?w=800&auto=format&fit=crop'">
+                    <img src="images/garage.png" alt="JETFIX Facility" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Modern Facility</h3>
@@ -332,8 +456,7 @@
 
                 <!-- Gallery Item 2 -->
                 <div class="gallery-item" data-category="work">
-                    <img src="images/gallery-2.jpg" alt="Engine Repair" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=800&auto=format&fit=crop'">
+                    <img src="images/repair.jpg" alt="Engine Repair" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Engine Repair</h3>
@@ -344,8 +467,7 @@
 
                 <!-- Gallery Item 3 -->
                 <div class="gallery-item" data-category="work">
-                    <img src="images/gallery-3.jpg" alt="Brake Service" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?w=800&auto=format&fit=crop'">
+                    <img src="images/diagnostic.jpg" alt="Brake Service" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Brake Systems</h3>
@@ -356,8 +478,7 @@
 
                 <!-- Gallery Item 4 -->
                 <div class="gallery-item" data-category="facility">
-                    <img src="images/gallery-4.jpg" alt="Service Bay" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1632823469149-31d5d6a6dbbf?w=800&auto=format&fit=crop'">
+                    <img src="images/hero-bg.jpg" alt="Service Bay" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Service Bays</h3>
@@ -368,8 +489,7 @@
 
                 <!-- Gallery Item 5 -->
                 <div class="gallery-item" data-category="team">
-                    <img src="images/gallery-5.jpg" alt="Expert Technicians" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1504328345606-18bbc8c9d7d1?w=800&auto=format&fit=crop'">
+                    <img src="images/team-profile.jpg" alt="Expert Technicians" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Expert Team</h3>
@@ -380,8 +500,7 @@
 
                 <!-- Gallery Item 6 -->
                 <div class="gallery-item" data-category="work">
-                    <img src="images/gallery-6.jpg" alt="Oil Change" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1625047509360-cd582f8afcc1?w=800&auto=format&fit=crop'">
+                    <img src="images/repair.png" alt="Oil Change" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Oil Service</h3>
@@ -392,8 +511,7 @@
 
                 <!-- Gallery Item 7 -->
                 <div class="gallery-item" data-category="facility">
-                    <img src="images/gallery-7.jpg" alt="Waiting Area" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1497366216548-37526070297c?w=800&auto=format&fit=crop'">
+                    <img src="images/about-us.jpg" alt="Waiting Area" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Waiting Area</h3>
@@ -404,8 +522,7 @@
 
                 <!-- Gallery Item 8 -->
                 <div class="gallery-item" data-category="work">
-                    <img src="images/gallery-8.jpg" alt="Tire Service" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&auto=format&fit=crop'">
+                    <img src="images/alignment.jpg" alt="Tire Service" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Tire Services</h3>
@@ -416,8 +533,7 @@
 
                 <!-- Gallery Item 9 -->
                 <div class="gallery-item" data-category="team">
-                    <img src="images/gallery-9.jpg" alt="Team at Work" class="w-full h-80 object-cover"
-                        onerror="this.src='https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=800&auto=format&fit=crop'">
+                    <img src="images/team-info.jpg" alt="Team at Work" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
                             <h3 class="text-xl font-bold mb-2">Team in Action</h3>
