--- a/team.html
+++ b/team.html
@@ -300,6 +300,104 @@
                 display: none;
             }
         }
+
+        /* Enhanced Mobile Navigation Styles */
+        @media (max-width: 1024px) {
+            .mobile-menu-backdrop {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.5);
+                backdrop-filter: blur(4px);
+                opacity: 0;
+                visibility: hidden;
+                transition: opacity 0.3s ease, visibility 0.3s ease;
+                z-index: 998;
+            }
+
+            .mobile-menu-backdrop.active {
+                opacity: 1;
+                visibility: visible;
+            }
+
+
+            #mobileMenu {
+                transform: translateY(-100%);
+                opacity: 0;
+                visibility: hidden;
+                transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+                    opacity 0.4s ease, visibility 0.4s ease;
+            }
+
+            #mobileMenu.active {
+                transform: translateY(0);
+                opacity: 1;
+                visibility: visible;
+            }
+
+            .hamburger-line {
+                display: block;
+                width: 28px;
+                height: 3px;
+                background: currentColor;
+                border-radius: 3px;
+                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            }
+
+            .hamburger-line:not(:last-child) {
+                margin-bottom: 5px;
+            }
+
+            #mobileMenuBtn.active .hamburger-line:nth-child(1) {
+                transform: translateY(8px) rotate(45deg);
+            }
+
+            #mobileMenuBtn.active .hamburger-line:nth-child(2) {
+                opacity: 0;
+                transform: scaleX(0);
+            }
+
+            #mobileMenuBtn.active .hamburger-line:nth-child(3) {
+                transform: translateY(-8px) rotate(-45deg);
+            }
+
+            #mobileMenu ul li {
+                opacity: 0;
+                transform: translateX(-20px);
+                transition: opacity 0.3s ease, transform 0.3s ease;
+            }
+
+            #mobileMenu.active ul li {
+                opacity: 1;
+                transform: translateX(0);
+            }
+
+            #mobileMenu.active ul li:nth-child(1) {
+                transition-delay: 0.1s;
+            }
+
+            #mobileMenu.active ul li:nth-child(2) {
+                transition-delay: 0.15s;
+            }
+
+            #mobileMenu.active ul li:nth-child(3) {
+                transition-delay: 0.2s;
+            }
+
+            #mobileMenu.active ul li:nth-child(4) {
+                transition-delay: 0.25s;
+            }
+
+            #mobileMenu.active ul li:nth-child(5) {
+                transition-delay: 0.3s;
+            }
+
+            #mobileMenu.active ul li:nth-child(6) {
+                transition-delay: 0.35s;
+            }
+        }
     </style>
 
 </head>
@@ -353,7 +451,7 @@
                     <li><a href="services.html"
                             class="text-gray-900 hover:text-secondary transition font-medium">Services</a>
                     </li>
-                    <li><a href="team.html" class="text-secondary font-medium">Our
+                    <li><a href="team.html" class="text-secondary font-bold border-b-2 border-secondary pb-1">Our
                             Team</a>
                     </li>
                     <li><a href="gallery.html"
@@ -369,36 +467,35 @@
                     </li>
                 </ul>
 
-                <!-- Mobile Menu Button -->
-                <button id="mobileMenuBtn" class="lg:hidden text-gray-900">
-                    <i class="fas fa-bars text-2xl"></i>
+                <!-- Mobile Menu Toggle -->
+                <button id="mobileMenuBtn" class="lg:hidden text-gray-900" aria-label="Toggle mobile menu"
+                    style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 8px;">
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
                 </button>
             </div>
 
+            <!-- Mobile Menu Backdrop -->
+            <div class="mobile-menu-backdrop" id="mobileBackdrop"></div>
+
             <!-- Mobile Menu -->
-            <div id="mobileMenu" class="hidden lg:hidden pb-4">
-                <ul class="flex flex-col gap-3">
+            <div id="mobileMenu"
+                class="fixed top-[80px] left-0 w-full bg-white shadow-lg px-4 pb-4 hidden lg:hidden z-[999]">
+                <ul class="flex flex-col gap-3 text-center">
                     <li><a href="index.html"
-                            class="block text-gray-900 hover:text-secondary transition font-medium">Home</a>
-                    </li>
+                            class="block text-gray-900 hover:text-secondary transition font-medium">Home</a></li>
                     <li><a href="services.html"
-                            class="block text-gray-900 hover:text-secondary transition font-medium">Services</a>
-                    </li>
-                    <li><a href="team.html" class="block text-secondary font-medium">Our
+                            class="block text-gray-900 hover:text-secondary transition font-medium">Services</a></li>
+                    <li><a href="team.html" class="block text-gray-900 hover:text-secondary transition font-medium">Our
                             Team</a></li>
                     <li><a href="gallery.html"
-                            class="block text-gray-900 hover:text-secondary transition font-medium">Gallery</a>
-                    </li>
+                            class="block text-gray-900 hover:text-secondary transition font-medium">Gallery</a></li>
                     <li><a href="contact.html"
-                            class="block text-gray-900 hover:text-secondary transition font-medium">Contact</a>
-                    </li>
-                    <li>
-                        <a href="tel:+2348148595815"
-                            class="bg-secondary hover:bg-red-700 text-secondary-foreground px-6 py-2 rounded font-semibold transition inline-flex items-center gap-2 justify-center">
-                            <i class="fas fa-phone"></i>
-                            Call Now
-                        </a>
-                    </li>
+                            class="block text-gray-900 hover:text-secondary transition font-medium">Contact</a></li>
+                    <li><a href="tel:+2348148595815"
+                            class="bg-secondary hover:bg-red-700 text-secondary-foreground px-6 py-2 rounded font-semibold transition inline-flex items-center gap-2 justify-center"><i
+                                class="fas fa-phone"></i> Call Now</a></li>
                 </ul>
             </div>
         </div>
@@ -764,36 +861,8 @@
     </div>
 
     <!-- Mobile Menu Script -->
-    <script>
-        // Mobile menu toggle
-        const mobileMenuBtn = document.getElementById('mobileMenuBtn');
-        const mobileMenu = document.getElementById('mobileMenu');
-
-        if (mobileMenuBtn && mobileMenu) {
-            mobileMenuBtn.addEventListener('click', () => {
-                mobileMenu.classList.toggle('hidden');
-            });
-        }
-
-        // Intersection Observer for Scroll Animations
-        const observerOptions = {
-            threshold: 0.1,
-            rootMargin: '0px 0px -50px 0px'
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('visible');
-                }
-            });
-        }, observerOptions);
-
-        // Observe all fade-in elements
-        document.querySelectorAll('.fade-in-up').forEach(el => {
-            observer.observe(el);
-        });
-    </script>
+    <!-- JavaScript -->
+    <script src="script.js"></script>
 </body>
 
 </html>
