--- a/gallery.html
+++ b/gallery.html
@@ -432,9 +432,6 @@
                 <button
                     class="filter-btn px-8 py-3 rounded-full font-semibold transition bg-white text-gray-700 hover:bg-primary hover:text-white"
                     data-filter="work">Our Work</button>
-                <button
-                    class="filter-btn px-8 py-3 rounded-full font-semibold transition bg-white text-gray-700 hover:bg-primary hover:text-white"
-                    data-filter="team">Our Team</button>
             </div>
         </div>
     </section>
@@ -443,16 +440,7 @@
     <section class="py-16 lg:py-24 bg-gray-50">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Gallery Item 1 -->
-                <div class="gallery-item" data-category="facility">
-                    <img src="images/garage.png" alt="JETFIX Facility" class="w-full h-80 object-cover">
-                    <div class="gallery-overlay">
-                        <div class="text-white">
-                            <h3 class="text-xl font-bold mb-2">Modern Facility</h3>
-                            <p class="text-sm">State-of-the-art equipment</p>
-                        </div>
-                    </div>
-                </div>
+
 
                 <!-- Gallery Item 2 -->
                 <div class="gallery-item" data-category="work">
@@ -487,38 +475,11 @@
                     </div>
                 </div>
 
-                <!-- Gallery Item 5 -->
-                <div class="gallery-item" data-category="team">
-                    <img src="images/team-profile.jpg" alt="Expert Technicians" class="w-full h-80 object-cover">
-                    <div class="gallery-overlay">
-                        <div class="text-white">
-                            <h3 class="text-xl font-bold mb-2">Expert Team</h3>
-                            <p class="text-sm">Certified technicians</p>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Gallery Item 6 -->
-                <div class="gallery-item" data-category="work">
-                    <img src="images/repair.png" alt="Oil Change" class="w-full h-80 object-cover">
-                    <div class="gallery-overlay">
-                        <div class="text-white">
-                            <h3 class="text-xl font-bold mb-2">Oil Service</h3>
-                            <p class="text-sm">Quick and professional</p>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Gallery Item 7 -->
-                <div class="gallery-item" data-category="facility">
-                    <img src="images/about-us.jpg" alt="Waiting Area" class="w-full h-80 object-cover">
-                    <div class="gallery-overlay">
-                        <div class="text-white">
-                            <h3 class="text-xl font-bold mb-2">Waiting Area</h3>
-                            <p class="text-sm">Comfortable customer lounge</p>
-                        </div>
-                    </div>
-                </div>
+
+
+
 
                 <!-- Gallery Item 8 -->
                 <div class="gallery-item" data-category="work">
@@ -531,13 +492,128 @@
                     </div>
                 </div>
 
-                <!-- Gallery Item 9 -->
+
+
+                <!-- New Images -->
+                <!-- CEO Male -->
                 <div class="gallery-item" data-category="team">
-                    <img src="images/team-info.jpg" alt="Team at Work" class="w-full h-80 object-cover">
+                    <img src="images/ceo-male.jpg" alt="CEO" class="w-full h-80 object-cover">
                     <div class="gallery-overlay">
                         <div class="text-white">
-                            <h3 class="text-xl font-bold mb-2">Team in Action</h3>
-                            <p class="text-sm">Dedicated professionals</p>
+                            <h3 class="text-xl font-bold mb-2">Leadership</h3>
+                            <p class="text-sm">Visionary Leadership</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CEO Female -->
+                <div class="gallery-item" data-category="team">
+                    <img src="images/ceo-female.jpg" alt="CEO" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Leadership</h3>
+                            <p class="text-sm">Visionary Leadership</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Gbenga Photo -->
+                <div class="gallery-item" data-category="team">
+                    <img src="images/gbenga-photo.jpg" alt="Team Member" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Expert Technician</h3>
+                            <p class="text-sm">Skilled Professional</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Jemimah Taiwo -->
+                <div class="gallery-item" data-category="team">
+                    <img src="images/jemimah-taiwo-photo.jpg" alt="Team Member" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Customer Relations</h3>
+                            <p class="text-sm">Service with a Smile</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Mahmoud Photo -->
+                <div class="gallery-item" data-category="team">
+                    <img src="images/mahmoud-photo.jpg" alt="Team Member" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Expert Technician</h3>
+                            <p class="text-sm">Skilled Professional</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Manual Alignment -->
+                <div class="gallery-item" data-category="work">
+                    <img src="images/manual-alignment.jpg" alt="Manual Alignment" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Precision Alignment</h3>
+                            <p class="text-sm">Expert Handling</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Driving School -->
+                <div class="gallery-item" data-category="work">
+                    <img src="images/driving-school.jpg" alt="Driving School" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Driving School</h3>
+                            <p class="text-sm">Professional Training</p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!-- Car Wash -->
+                <div class="gallery-item" data-category="work">
+                    <img src="images/wash.jpeg" alt="Car Wash" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Car Wash</h3>
+                            <p class="text-sm">Sparkling Clean</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Facility View (Back2) -->
+                <div class="gallery-item" data-category="facility">
+                    <img src="images/back2.jpeg" alt="Facility View" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Our Facility</h3>
+                            <p class="text-sm">Spacious and Equipped</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Building -->
+                <div class="gallery-item" data-category="facility">
+                    <img src="images/building.jpeg" alt="Our Building" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">JETFIX Headquarters</h3>
+                            <p class="text-sm">Easy to Locate</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Simulation (Sim) -->
+                <div class="gallery-item" data-category="work">
+                    <img src="images/sim.jpeg" alt="Simulation" class="w-full h-80 object-cover">
+                    <div class="gallery-overlay">
+                        <div class="text-white">
+                            <h3 class="text-xl font-bold mb-2">Advanced Training</h3>
+                            <p class="text-sm">Simulation & Diagnostics</p>
                         </div>
                     </div>
                 </div>
@@ -660,7 +736,7 @@
                 // Filter gallery items
                 const filter = btn.getAttribute('data-filter');
                 galleryItems.forEach(item => {
-                    if (filter === 'all' || item.getAttribute('data-category') === filter) {
+                    if ((filter === 'all' && item.getAttribute('data-category') !== 'team') || item.getAttribute('data-category') === filter) {
                         item.style.display = 'block';
                         setTimeout(() => item.style.opacity = '1', 10);
                     } else {
@@ -669,6 +745,14 @@
                     }
                 });
             });
+        });
+
+        // Apply default filter (All) on load to hide team members
+        window.addEventListener('DOMContentLoaded', () => {
+            const activeBtn = document.querySelector('.filter-btn[data-filter="all"]');
+            if (activeBtn) {
+                activeBtn.click();
+            }
         });
     </script>
     <script src="script.js"></script>
