--- a/team.html
+++ b/team.html
@@ -614,15 +614,15 @@
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
+            <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
                 <!-- Team Member 1: Manager -->
-                <div class="team-card bg-card rounded-xl shadow-lg overflow-hidden fade-in-up delay-100">
-                    <div class="team-image-wrapper h-64">
+                <div class="team-card bg-card rounded-xl shadow-2xl overflow-hidden fade-in-up delay-100">
+                    <div class="team-image-wrapper h-80">
                         <div
                             style="background-image: url('images/gbenga-photo.jpg'); background-position: center 20%; background-size: 90%;">
                         </div>
                     </div>
-                    <div class="p-6 relative z-10">
+                    <div class="p-8 relative z-10">
                         <div class="mb-2">
                             <span
                                 class="inline-block bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-semibold">Manager</span>
@@ -637,37 +637,14 @@
                     </div>
                 </div>
 
-                <!-- Team Member 2: Senior Technician -->
-                <div class="team-card bg-card rounded-xl shadow-lg overflow-hidden fade-in-up delay-200">
-                    <div class="team-image-wrapper h-64">
-                        <div
-                            style="background-image: url('images/mahmoud-photo.jpg'); background-position: center 20%; background-size: 90%;">
-                        </div>
-                    </div>
-                    <div class="p-6 relative z-10">
-                        <div class="mb-2">
-                            <span
-                                class="inline-block bg-secondary/10 text-secondary px-3 py-1 rounded-full text-sm font-semibold">Senior
-                                Technician</span>
-                        </div>
-                        <h3 class="font-heading font-bold text-2xl mb-2 text-card-foreground">Mahmoud Olaosaye Lukman
-                        </h3>
-                        <p class="text-muted-foreground leading-relaxed">
-                            Mahmoud Olaosaye Lukman is a well-seasoned senior technician with over five years experience
-                            working across some units in the company. He is a highly committed and dependable staff
-                            member who has been a long serving member of the company.
-                        </p>
-                    </div>
-                </div>
-
                 <!-- Team Member 3: Driving Instructor -->
-                <div class="team-card bg-card rounded-xl shadow-lg overflow-hidden fade-in-up delay-300">
-                    <div class="team-image-wrapper h-64">
+                <div class="team-card bg-card rounded-xl shadow-2xl overflow-hidden fade-in-up delay-300">
+                    <div class="team-image-wrapper h-80">
                         <div
                             style="background-image: url('images/jemimah-taiwo-photo.jpg');background-position: center 25%;background-size: 90%;">
                         </div>
                     </div>
-                    <div class="p-6 relative z-10">
+                    <div class="p-8 relative z-10">
                         <div class="mb-2">
                             <span
                                 class="inline-block bg-gradient-to-r from-primary to-secondary text-white px-3 py-1 rounded-full text-sm font-semibold">Driving
