--- a/gallery.html
+++ b/gallery.html
@@ -387,7 +387,7 @@
 
             <!-- Mobile Menu -->
             <div id="mobileMenu"
-                class="fixed top-[80px] left-0 w-full bg-white shadow-lg px-4 pb-4 hidden lg:hidden z-[999]">
+                class="fixed top-[80px] left-0 w-full bg-white shadow-lg px-4 pb-4 pt-6 hidden lg:hidden z-[999]">
                 <ul class="flex flex-col gap-3 text-center">
                     <li><a href="index.html"
                             class="block text-gray-900 hover:text-secondary transition font-medium">Home</a></li>
