--- a/contact.html
+++ b/contact.html
@@ -465,10 +465,10 @@
                             <div>
                                 <h3 class="text-xl font-bold mb-2 text-gray-900">Visit Us</h3>
                                 <p class="text-gray-600">
-                                    Block B, Plot 4, 6 & 8<br>
-                                    Harmony Reservation Area<br>
-                                    Fate Road, Ilorin<br>
-                                    Kwara State, Nigeria
+                                    Plot 4 and 6, Jetfix Autocare<br>
+                                    Harmony Reservation Area, Block B Fate Rd<br>
+                                    beside NTA, Oko Erin 240102<br>
+                                    Kwara, Nigeria
                                 </p>
                             </div>
                         </div>
@@ -528,10 +528,9 @@
                     <h3 class="text-2xl font-bold mb-4 text-gray-900 font-heading">Find Us on the Map</h3>
                     <div class="w-full h-96 rounded-xl overflow-hidden">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.123456789012!2d4.542899!3d8.496944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zOMKwMjknNDkuMCJOIDTCsDMyJzM0LjQiRQ!5e0!3m2!1sen!2sng!4v1234567890"
+                            src="https://maps.google.com/maps?q=Plot+4+and+6,+Jetfix+Autocare,+Harmony+Reservation+Area,+Block+B+Fate+Rd,+beside+NTA,+Oko+Erin+240102,+Kwara,+Nigeria&t=&z=13&ie=UTF8&iwloc=&output=embed"
                             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"
-                            title="JETFIX AUTOCARE Location - Fate Road, Ilorin">
+                            referrerpolicy="no-referrer-when-downgrade" title="JETFIX AUTOCARE Location">
                         </iframe>
                     </div>
                     <p class="mt-4 text-gray-600 text-sm">
@@ -606,10 +605,11 @@
                     <h4 class="text-white text-xl font-bold mb-4 font-heading">Contact Info</h4>
                     <div class="space-y-3">
                         <p class="flex items-start gap-3"><i
-                                class="fas fa-map-marker-alt text-secondary mt-1"></i><span>Block B, Plot 4, 6 & 8<br>
-                                Harmony Reservation Area<br>
-                                Fate Road, Ilorin<br>
-                                Kwara State, Nigeria</span></p>
+                                class="fas fa-map-marker-alt text-secondary mt-1"></i><span>Plot 4 and 6, Jetfix
+                                Autocare<br>
+                                Harmony Reservation Area, Block B Fate Rd<br>
+                                beside NTA, Oko Erin 240102<br>
+                                Kwara, Nigeria</span></p>
                         <p class="flex items-center gap-3"><i class="fas fa-phone text-secondary"></i><a
                                 href="tel:+2348148595815" class="hover:text-white transition">+234 814 859 5815</a></p>
                         <p class="flex items-center gap-3"><i class="fas fa-envelope text-secondary"></i><a
