--- a/team.html
+++ b/team.html
@@ -801,8 +801,8 @@
                     <ul class="space-y-3">
                         <li class="flex items-start gap-2 text-gray-400">
                             <i class="fas fa-map-marker-alt text-primary mt-1"></i>
-                            <span>Block B, Plot 4, 6 & 8, Harmony Reservation Area, Fate Road, Ilorin, Kwara State,
-                                Nigeria</span>
+                            <span>Plot 4 and 6, Jetfix Autocare, Harmony Reservation Area, Block B Fate Rd, beside NTA,
+                                Oko Erin 240102, Kwara, Nigeria</span>
                         </li>
                         <li class="flex items-center gap-2">
                             <i class="fas fa-phone text-primary"></i>
