--- a/contact.html
+++ b/contact.html
@@ -528,7 +528,7 @@
                     <h3 class="text-2xl font-bold mb-4 text-gray-900 font-heading">Find Us on the Map</h3>
                     <div class="w-full h-96 rounded-xl overflow-hidden">
                         <iframe
-                            src="https://maps.google.com/maps?q=Plot+4+and+6,+Jetfix+Autocare,+Harmony+Reservation+Area,+Block+B+Fate+Rd,+beside+NTA,+Oko+Erin+240102,+Kwara,+Nigeria&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                            src="https://maps.google.com/maps?q=Jetfix+Autocare&ll=8.4972464,4.58762&z=17&output=embed"
                             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade" title="JETFIX AUTOCARE Location">
                         </iframe>
